--- a/site/index.html
+++ b/site/index.html
@@ -7,7 +7,7 @@
     <title>David Chu's China Bistro</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/styles.css">
-    <link href='https://fonts.googleapis.com/css?family=Oxygen:400,300,700' rel='stylesheet' type='text/css'>
+  
   </head>
 <body>
 <header>
@@ -16,6 +16,12 @@
    <a href="index.html" class"">
   <div id="logo-img" alt="Logo image"></div>
   </a>
+  <div class="navbar-brand">
+  <a href="index.html"><h1> David Chu's China Bistro</h1> </a>
+  <p>
+  <img src="images/star-k-logo.png" alt="Kosher certification">
+  <span> Kosher Certified</span>
+  </p>
   </div>
   </nav>
 </header>
